# rust-grpc-websocket-demo

./: .gitignore  Cargo.toml  DEMO.md  README.md  test_grpc.html
backend/: .env  ARCHITECTURE_REDESIGN.md  Cargo.toml  Dockerfile  WEBSOCKET_ARCHITECTURE.md  WEBSOCKET_IMPLEMENTATIONS.md  build.rs  env.example
backend/examples/: generate_password.rs
backend/migrations/: 001_initial.sql  002_add_rooms.sql
backend/proto/: chat.proto
backend/src/: grpc_service.rs  main.rs
backend/src/database/: connection.rs  message_repository.rs  mod.rs  room_repository.rs  user_repository.rs
backend/src/grpc/: auth.rs  chat_service.rs  mod.rs  user_service.rs
backend/src/http/: handlers.rs  middleware.rs
backend/src/models/: message.rs  room.rs  user.rs
backend/src/redis/: connection.rs  mod.rs  session_manager.rs
backend/src/websocket/: broadcast_handler.rs  connection_state.rs  handler.rs  handler_v2.rs  message.rs  message_handlers.rs  mod.rs  user_tracker.rs
backend/src/websocket/new_websocket/: command_processor.rs  event_handler_factory.rs  handler.rs  mod.rs  strategy_factory.rs
backend/src/websocket/new_websocket/event_handlers/: chat_message_handler.rs  enum_handler.rs  error_handler.rs  get_messages_handler.rs  get_online_users_handler.rs  join_room_handler.rs  leave_room_handler.rs  message_handler.rs  mod.rs  send_message_handler.rs
backend/src/websocket/old_websocket/: handler.rs  message_handlers.rs  mod.rs
docker/: docker-compose.yml
frontend/: Dockerfile  env.example  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
(+22 files in other folders)
