[package]
name = "chat-backend"
version = "0.1.0"
edition = "2021"

[features]
default = []
old-websocket = []

[dependencies]
# gRPC 相关
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
tonic-web = "0.10"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
hyper = { version = "0.14", features = ["full"] }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid", "macros", "migrate"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp"] }

# WebSocket
tokio-tungstenite = "0.20"
futures-util = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 密码哈希
bcrypt = "0.15"

# JWT
jsonwebtoken = "9.2"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 配置
config = "0.14"
# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# HTTP 服务器 (用于健康检查)
warp = "0.3"

# 环境变量
dotenv = "0.15"

[build-dependencies]
tonic-build = "0.10"
